--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/jquery.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/another.js"></script>
 </head>
 <body>
 	<div id="container"></div>
