--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 	<title>Unsplash</title>
 	<link rel="stylesheet" href="css/style.css">
-	<script src="js/jquery.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/main.js"></script>
-	<script src="js/another.js"></script>
 </head>
 <body>
 	<div id="container"></div>
