--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Unsplash</title>
-	<link rel="stylesheet" href="css/style.css">
-	<script src="js/jquery.min.js"></script>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div id="container"></div>
-	<script src="js/main.js"></script>
+
+	<script src="main.js"></script>
 </body>
 </html>
