--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div id="container"></div>
+	<div id="container" class="container"></div>
 
 	<script src="main.js"></script>
 </body>
